[gd_scene load_steps=8 format=3 uid="uid://mtwl05xvpndq"]

[ext_resource type="Script" path="res://fail_screen/fail_screen.gd" id="1_es862"]
[ext_resource type="Texture2D" uid="uid://cuxwmluab7al0" path="res://fail_screen/MichealsMansionLoss.webp" id="1_f4jr2"]
[ext_resource type="FontFile" uid="uid://l73yc6ee676i" path="res://SeymourOne-Regular.ttf" id="2_et7q8"]
[ext_resource type="Texture2D" uid="uid://brarw7u4dnrbt" path="res://buttons/Play.webp" id="4_ikoxu"]

[sub_resource type="Animation" id="Animation_j5ipt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1415, 450)]
}

[sub_resource type="Animation" id="Animation_ny10k"]
resource_name = "ShowPlay"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(0.366022, 1),
"update": 0,
"values": [Vector2(1415, 450), Vector2(750, 450)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aai15"]
_data = {
"RESET": SubResource("Animation_j5ipt"),
"ShowPlay": SubResource("Animation_ny10k")
}

[node name="FailScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_es862")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_f4jr2")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1314.0
offset_bottom = 296.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DeathReasonLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(880, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("2_et7q8")
theme_override_font_sizes/font_size = 60
text = "You died to ligma!"
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1220, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("2_et7q8")
theme_override_font_sizes/font_size = 40
text = "You survived for: {0}"
autowrap_mode = 2

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1415.0
offset_top = 450.0
offset_right = 1904.0
offset_bottom = 640.0
texture_normal = ExtResource("4_ikoxu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayButton"]
libraries = {
"": SubResource("AnimationLibrary_aai15")
}
autoplay = "ShowPlay"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
